# blink

./: .env.example  .gitignore  Cargo.toml  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/[alias]/: route.ts
components/: create-link-form.tsx
contracts/link-registry/: Cargo.toml
contracts/link-registry/src/: lib.rs  test.rs
contracts/link-registry/test_snapshots/test/: lifecycle_and_ownership.1.json
lib/: stellar.ts
